--- a/MeriPustak.DataAccesss/MeriPustak.DataAccesss.csproj
+++ b/MeriPustak.DataAccesss/MeriPustak.DataAccesss.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\MeriPustak.Utility\MeriPustak.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
